# PBRT-renderer-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SHARING_SOLUTIONS_ONLINE_IS_FORBIDDEN.txt  analyze_furnace.py  blobs.txt  check_scene.py  chi2test_11.m  chi2test_14.m  chi2test_2.m  chi2test_3.m  chi2test_4.m  chi2test_5.m  chi2test_8.m  comment_omori.py  make_white_furnace.py  validate_volumetrics.py
.github/workflows/: cmake.yml
chi_tests/: chi2test_1.m  chi2test_10.m  chi2test_12.m  chi2test_13.m  chi2test_15.m  chi2test_6.m  chi2test_7.m  chi2test_9.m
dxr/: CMakeLists.txt  snapshot_131.ppm
dxr/scripts/: hdr_script.py  vdb_to_vol.py
dxr/shaders/: ClosestHit.hlsl  Common.hlsl  Common.hlsli  Disney.hlsli  Emitter.hlsli  Envmap.hlsli  GeometryUtils.hlsli  Hair.hlsli  Material.hlsli  Microfacet.hlsli  Miss.hlsl  RNG.hlsli  RayGen.hlsl  Shaders.hlsl  Volume.hlsl
dxr/src/: DXRApp.cpp  DXRApp.h  DXRApp_Camera.cpp  DXRApp_Device.cpp  DXRApp_Scene.cpp  Win32application.cpp  main.cpp
ext/: CMakeLists.txt
ext/plugin/: io_nori.py
final_report/: report.html
final_report/images_exr/: disney_clearcoat_ours.exr  disney_metallic_ours.exr  disney_sheen_ours.exr  disney_sheen_ref.exr  ibl_mirror_ours.exr  ibl_mirror_ref.exr  ibl_ref.exr  normalmap_flat_ref.exr  snapshot_512.exr  texture_flat_ref.exr
include/: accel.h  bbox.h  block.h  bsdf.h  camera.h  color.h  dpdf.h  emitter.h  frame.h  hair.h  integrator.h  medium.h  mesh.h  object.h  parser.h  proplist.h  ray.h  rfilter.h  sampler.h  scene.h  texture.h  timer.h  transform.h  vector.h  warp.h
include/nori/: accel.h  bbox.h  bitmap.h  block.h  bsdf.h  camera.h  color.h  common.h  dpdf.h  emitter.h  frame.h  gui.h  hair.h  integrator.h  medium.h  mesh.h  object.h  parser.h  proplist.h  ray.h  rfilter.h  sampler.h  scene.h  texture.h  timer.h  transform.h  vector.h  warp.h
results/a0/: bunny.exr  report.html
results/a1/: ajax-normals-reference.exr  report.html  stats.html
results/a2/: report.html
results/a3/: report.html
results/a4/: report.html
scenes/a0/: bunny.exr
scenes/a1/: ajax-normals.exr  ajax16-normals.exr  ajax16-normals.xml  ajax2-normals.exr  ajax2-normals.xml  ajax32-normals.exr  ajax32-normals.xml  ajax4-normals.exr  ajax4-normals.xml  ajax8-normals.exr  ajax8-normals.xml
scenes/a2/: ajax-ao-ref.exr  ajax-point-ref.exr  ajax-point.exr  ajax-point.xml  ajax-sphere-ref.exr  ajax-sphere.exr  ajax-sphere.xml
scenes/a3/cbox/: cbox-distributed.xml  (+1 more)
scenes/cool_scene1/: cornell_box.xml  snapshot_256.exr
scenes/final_scene_real/: cloud.xml  peen.xml  scene.xml  scene2.xml  sceneold.xml
scenes/guy/: ajax.xml  snapshot_64.exr
scripts/: bruh.py  mesh_to_vol.py  vdb_to_vol.py
shaders/: Common.hlsli  Disney.hlsli  Emitter.hlsli  Envmap.hlsli  Hair.hlsli  Material.hlsli  Microfacet.hlsli  RNG.hlsli  Shaders.hlsl  Subsurface.hlsli  Volume.hlsl
src/: accel.cpp  accel_no_acceleration.cpp  accel_no_parallel.cpp  accel_old.cpp  ao.cpp  bitmap.cpp  block.cpp  chi2test.cpp  common.cpp  dielectric.cpp  diffuse.cpp  direct.cpp  disney.cpp  gui.cpp  hair.cpp  heterogeneous.cpp  homogeneous.cpp  independent.cpp  lighttest.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  normals.cpp  obj.cpp  object.cpp  parser.cpp  path_ems.cpp  path_mats.cpp  path_mis.cpp  perspective.cpp  proplist.cpp  rfilter.cpp  scene.cpp  simple.cpp  ttest.cpp  warp.cpp  warptest.cpp
src/cpu/: accel.cpp  area.cpp  common.cpp  dielectric.cpp  diffuse.cpp  disney.cpp  hair.cpp  heterogeneous.cpp  homogeneous.cpp  independent.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  obj.cpp  object.cpp  parser.cpp  perspective.cpp  proplist.cpp  rfilter.cpp  scene.cpp  subsurface.cpp  warp.cpp
src/gpu/: DXRApp.cpp  DXRApp.h  DXRApp_Camera.cpp  DXRApp_Device.cpp  DXRApp_Pipeline.cpp  DXRApp_Scene.cpp  DXRApp_Textures.cpp  Denoiser.cpp  Denoiser.h  Win32application.cpp  Win32application.h  main.cpp
validation_tests/: compare_exr.py
validation_tests/disney/: README.md  analyze_furnace.py  cmp_clearcoat_nocc.xml  cmp_metallic_blue.xml  cmp_metallic_nometal.xml  cmp_rough_red_clearcoat.xml  cmp_sheen_fabric.xml  cmp_sheen_nosheen.xml  cmp_subsurface.xml  cmp_subsurface_nosub.xml  disney.xml  furnace_clearcoat.xml  furnace_diffuse.xml  furnace_lambertian.xml  furnace_lambertian_hires.xml  furnace_metallic_rough.xml  furnace_metallic_smooth.xml  make_hires_white_hdr.py  ref_furnace_clearcoat.exr  ref_furnace_diffuse.exr  ref_furnace_lambertian.exr  ref_furnace_metallic_rough.exr  ref_furnace_metallic_smooth.exr  ref_metallic_blue.exr  ref_rough_red_clearcoat.exr  ref_white_4x4.hdr  render_mitsuba_ref.py  rerender_visual_refs.py  snapshot_clearcoat_nocc.exr  snapshot_furnace_clearcoat.exr  snapshot_furnace_diffuse.exr  snapshot_furnace_lambertian.exr  snapshot_furnace_metallic_rough.exr  snapshot_furnace_metallic_smooth.exr  snapshot_metallic_nometal.exr  snapshot_sheen_nosheen.exr  snapshot_subsurface.exr  snapshot_subsurface_nosub.exr
validation_tests/dof/: README_DOF_VALIDATION.md  dof_dxr_out.exr  dof_envmap_pinhole.xml  dof_envmap_scene.xml  dof_envmap_small.xml  dof_mitsuba_out.exr  dof_ours_main.exr  dof_ours_pinhole.exr  dof_ours_small.exr  dof_pinhole_scene.xml  dof_test_scene.xml  mitsuba_dof_envmap.py  mitsuba_dof_render.py  pinhole_dxr.exr  pinhole_mitsuba.exr  pinhole_test.py  ref_dof_main.exr  ref_dof_pinhole.exr  ref_dof_small.exr  validate_dof.py
validation_tests/hair_furnace_test/: snapshot_26.exr  white_furnace_test.xml
validation_tests/hair_visual_test/: hair_visual_test.xml  make_directional_envmap.py  snapshot_256.exr  snapshot_512.exr
validation_tests/ibl_test/: ref_furnace_ibl.exr  ref_ibl.exr  render_mitsuba_ref.py  snapshot_furnace_ibl_512.exr  snapshot_ibl_512.exr  sphere_furnace_ibl.xml  sphere_ibl.xml  sphere_mirror.xml  test_spot.hdr
validation_tests/normalmap_test/: cube_flat.xml  cube_normalmap.xml  ref_normalmap.exr  render_mitsuba_ref.py  snapshot_512.exr
validation_tests/texture_test/: ref_textured.exr  render_mitsuba_ref.py  snapshot_flat_512.exr  snapshot_textured_512.exr  sphere_textured.xml
(+154 files in other folders)
